--- a/core-bundle/src/Resources/views/Error/page_not_found.html.twig
+++ b/core-bundle/src/Resources/views/Error/page_not_found.html.twig
@@ -1,10 +1,10 @@
 {% extends "@ContaoCore/Error/layout.html.twig" %}
 {% block title %}
-    {{ statusCode }} {{ error.forbidden }}
+    {{ error.notFound }}
 {% endblock %}
 {% block matter %}
-    <p>{{ error.notAuthenticated }}</p>
+    <p>{{ error.pageNotFound }}</p>
 {% endblock %}
 {% block howToFix %}
-    <p>{{ error.forbiddenFix|format(base, adminEmail)|raw }}</p>
+    <p>{{ error.notFoundFix|format(base, adminEmail)|raw }}</p>
 {% endblock %}
