--- a/core-bundle/src/Resources/views/Error/error.html.twig
+++ b/core-bundle/src/Resources/views/Error/error.html.twig
@@ -1,6 +1,6 @@
 {% extends "@ContaoCore/Error/layout.html.twig" %}
 {% block title %}
-    {{ statusCode }} {{ error.error }}
+    {{ error.error }}
 {% endblock %}
 {% block matter %}
     <p>{{ error.errorOccurred }}</p>
